updates for image loading resolving issues on safari

--- a/src/components/controls/player-controls.scss
+++ b/src/components/controls/player-controls.scss
@@ -15,6 +15,10 @@
     justify-content: center;
     align-items: center;
 
+    @include screenSize(phoneOnly) {
+      width: 90%;
+    }
+
     .control-button {
       background-color: transparent;
       box-shadow: none;
@@ -32,6 +36,9 @@
     width: 50%;
     transition: opacity 250ms linear;
     opacity: 0;
+    @include screenSize(phoneOnly) {
+      width: 90%;
+    }
     .rc-slider {
       height: 1px;
 
